--- a/app/partials/guest/header.html
+++ b/app/partials/guest/header.html
@@ -1,4 +1,4 @@
-<div class="navbar"  style="margin-bottom:0px"  ng-controller="heaederCtrl">
+<div class="navbar"  style="margin-bottom:0px" ng-controller="headerCtrl">
     <div class="navbar-inner">
         <a class="brand" href="#" title="Wooice">
             <img width="78"  src="img/logo.jpg"/>
