--- a/app/partials/guest/login.html
+++ b/app/partials/guest/login.html
@@ -1,5 +1,4 @@
-
-<ng-include src="'partials/guest-header.html'"></ng-include>
+<ng-include src="'partials/guest/header.html'"></ng-include>
 
 <div class="row-fluid" style="background-image: url(img/home.jpg);background-position:center center; height:800px" >
 <div class="span8">
