--- a/app/partials/guest/register.html
+++ b/app/partials/guest/register.html
@@ -1,4 +1,4 @@
-<ng-include src="'partials/guest-header.html'"></ng-include>
+<ng-include src="'partials/guest/header.html'"></ng-include>
 <div class="container" style="padding-top:65px">
     <div>
         <legend>欢迎注册</legend>
