--- a/app/css/app.css
+++ b/app/css/app.css
@@ -45,7 +45,7 @@
 }
 
 .sound_player_header {
-    height: 20%
+    height: 25%
 }
 
 .sound_player_body {
@@ -53,7 +53,7 @@
 }
 
 .sound_player_footer{
-    padding-top: 10px;
+    padding-top: 5px;
 }
 
 .sound_player_wave {
@@ -73,7 +73,7 @@
 }
 
 .sound_player_control{
-    height: 100%;
+    padding-top:10px;
     width:4%;
     float: left;
     text-align:center;
@@ -171,13 +171,20 @@ icon-step-backward.sound_player_button{
     border-top: 1px solid #f2f2f2;
 }
 
+.border-light-bottom-nopadding{
+    border-bottom: 1px solid #f2f2f2;
+}
+
 .border-light-bottom{
     padding-bottom: 8px;
     border-bottom: 1px solid #f2f2f2;
 }
 
 .comment_body{
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     overflow:hidden
 }
 
@@ -245,3 +252,67 @@ input.ng-dirty.ng-valid {
 .navbar .brand {
     padding: 0px 0px 0px;
 }
+
+.tags {
+    margin: 0;
+    padding: 0;
+    right: 24px;
+    bottom: -12px;
+    list-style: none;
+}
+
+.tags li, .tags a{
+    float:left;
+    height:20px;
+    line-height:20px;
+    position:relative;
+    font-size:8px;
+}
+
+.tags a{
+    margin-left:20px;
+    padding:0 10px 0 12px;
+    background:#0089e0;
+    color:#fff;
+    text-decoration:none;
+    -moz-border-radius-bottomright:4px;
+    -webkit-border-bottom-right-radius:4px;
+    border-bottom-right-radius:4px;
+    -moz-border-radius-topright:4px;
+    -webkit-border-top-right-radius:4px;
+    border-top-right-radius:4px;
+}
+
+.tags a:before{
+    content:"";
+    float:left;
+    position:absolute;
+    top:0;
+    left:-10px;
+    width:0;
+    height:0;
+    border-color:transparent #0089e0 transparent transparent;
+    border-style:solid;
+    border-width:10px 10px 10px 0;
+}
+
+.tags a:after{
+    content:"";
+    position:absolute;
+    top:8px;
+    left:0;
+    float:left;
+    width:4px;
+    height:4px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    border-radius:2px;
+    background:#fff;
+    -moz-box-shadow:-1px -1px 2px #004977;
+    -webkit-box-shadow:-1px -1px 2px #004977;
+    box-shadow:-1px -1px 2px #004977;
+}
+
+.tags a:hover{background:#555;}
+
+.tags a:hover:before{border-color:transparent #555 transparent transparent;}
