--- a/app/partials/forbidden.html
+++ b/app/partials/forbidden.html
@@ -1,4 +1,4 @@
-<ng-include src="'partials/header.html'"></ng-include>
+<ng-include src="'partials/guest/header.html'"></ng-include>
 
 <div class="row-fluid">
     <div class="span4"></div>
