--- a/app/partials/upload.html
+++ b/app/partials/upload.html
@@ -3,7 +3,7 @@
 <div class="row-fluid">
     <div class="span3">
     </div>
-    <div class="span6" style="padding-top: 40px">
+    <div class="span6" style="padding-top: 60px">
         <div id="upload_error" class="{{defaultSound.uploadMsgClass}}">
             {{ defaultSound.uploadMsg}}
         </div>
@@ -11,101 +11,123 @@
         <div id="uploadpart" class="upload_container">
             <div class="upload_div">
                 <div style="padding-bottom: 10px">
-                <h2>分享声音，从这里开始</h2>
-               </div>
-               <h4> 您可以点击
+                    <h2>分享声音，从这里开始</h2>
+                </div>
+                <h4> 您可以点击
         <span href="#" class="button button button-rounded button-flat-primary action-button fileinput-button">
                 <i class="icon-plus icon-white"></i>
                 <span>上传声音</span>
                 <input id="sound_upload" type="file" name="file" class="upload_button">
         </span> 或将音频文件拖放到此页面 </h4>
-                <h5 style="color: #999;padding-top: 10px">您还可以上传时长<span style="color: rgb(51, 51, 51)">{{defaultSound.minutesToUpload}}</span>分钟的音频文件</h5>
-           </div>
+                <h5 ng-show="shouldCheckCapacity()" style="color: #999;padding-top: 10px">除去已完成的上传，您还可以上传时长<span style="color: rgb(51, 51, 51)">{{defaultSound.minutesToUpload}}</span>分钟<span
+                        style="color: rgb(51, 51, 51)">{{defaultSound.secondsToUpload}}</span>秒的音频文件</h5>
+            </div>
         </div>
 
-        <div >
-        <div id="progresspart" class="hide">
+        <div>
+            <div id="progresspart" class="hide">
 
-            <div id="progress" class="progress {{defaultSound.uploadStatus}}">
-                <div class="bar"></div>
-            </div>
+                <div id="progress" class="progress {{defaultSound.uploadStatus}}">
+                    <div class="bar"></div>
+                </div>
 
-         <div class=" pull-right">
-          <span href="#" class="button button-small button-rounded button-flat-primary action-button fileinput-button">
+                <div class=" pull-right">
+          <span ng-show="!defaultSound.isSoundUploading" href="#"
+                class="button button-small button-rounded button-flat-primary action-button fileinput-button">
                 <i class="icon-plus icon-white"></i>
                 <span>上传声音</span>
                 <input id="sound_change_upload" type="file" name="file" class="upload_button">
          </span>
-          <span id="cancel_button" class="button button-small button-rounded button-flat-highlight disabled"
-                ng-click="cancelUpload()">
+          <a href="#" ng-show="defaultSound.isSoundUploading" id="cancel_button"
+                class="button button-small button-rounded button-flat-highlight">
                 <i class="icon-ban-circle icon-white"></i>
                 <span>取消上传</span>
-        </span>
-             </div>
-        </div>
-        <br><br>
+         </a>
+                </div>
+            </div>
+            <br><br>
 
-        <div id="sound_info" class="row-fluid hide">
-            <div class="span4">
-                <img src="{{defaultSound.posterUrl}}" id="poster_img" height="200" width="200" >
-                  <span style="margin-top: -60px;margin-left: 50px"
+            <div id="sound_info" class="row-fluid hide" style="padding-left:60px">
+                <div class="span4">
+                    <div class="{{defaultSound.imgUploadMsgClass}}">
+                        <i ng-show="defaultSound.uplodingPoster"
+                           class="icon-spinner icon-spin icon-large"></i>{{ defaultSound.imgUploadMsg}}
+                    </div>
+                    <img ng-src="{{defaultSound.posterUrl}}" id="poster_img" height="200" width="200">
+                  <span style="margin-top: -60px;margin-left: 50px" ng-show="!defaultSound.uplodingPoster"
                         class="button button-small button-rounded button-flat action-button fileinput-button">
                     <span>上传海报</span>
-                    <input id="poster_upload" type="file" name="file" ng-change="previewImage()">
+                    <input id="poster_upload" type="file" name="file">
                   </span>
-            </div>
 
-            <div class="span5">
-                <div style="padding-left: 10px">
-                    <div id="profile_info" class="{{defaultSound.profileMsgClass}}">
-                        {{ defaultSound.profileMsg}}
-                    </div>
-
-                    <div style="width: 100%;padding: 5px">
-                        <label style="color:rgb(51, 51, 51)">声音名称</label>
-                        <input type="text" id="name" name="name" placeholder="请输入这段声音的名称" ng-model="defaultSound.name"
-                               class="input-xlarge">
-                    </div>
-
-                    <div style="width: 100%;padding: 5px" class="container">
-                        <label style="color:rgb(51, 51, 51)">声音标签</label>
-
-                        <div style="width: 120%" class="container">
-                            <div id="tags_div" ng-repeat="tag in defaultSound.tags" style="float: left">
-                                <div class="btn-group" style="padding: 5px;padding-right: 15px;color:lightskyblue" id="tag_{{tag}">
-                                    <label><i class="icon-tag"> <b>{{tag}}</b> </i><i class="icon-remove" ng-click="removeTag(tag)"></i>
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-
-                        <input type="text" id="tags" name="tags" class="input-small" placeholder="请打一个标签">
-                    </div>
-
-                    <div style="width: 100%;padding: 5px">
-                        <label style="color:rgb(51, 51, 51)">声音描述</label>
-                        <textarea id="description" name="description" placeholder="请介绍这段声音"
-                                  ng-model="defaultSound.description" class="input-xlarge"></textarea>
-
-
-                        <div class="btn-group" data-toggle="buttons-radio">
-                            <button type="button" class="btn" ng-click="setPrivate()">私有</button>
-                            <button type="button" class="btn active" ng-click="setPublic()">公开</button>
-                        </div>
-                    </div>
-
-                    <div class="pull-right">
-                        <a id="save_button" href="#"
-                           class="button button-small button-rounded button-flat-action action-button disabled"
-                           onclick="return false;" ng-click="save()">保存</a>
-                    </div>
+                  <span id="cancel_img_upload" style="margin-top: -60px;margin-left: 50px"
+                        ng-show="defaultSound.uplodingPoster"
+                        class="button button-small button-rounded button-flat action-button fileinput-button">
+                      <i class="icon-ban-circle icon-white"></i>
+                      <span>取消上传</span>
+                  </span>
                 </div>
 
-            </div>
+                <div class="span5">
+                    <div style="padding-left: 10px">
+                        <div id="profile_info" class="{{defaultSound.profileMsgClass}}">
+                            {{ defaultSound.profileMsg}}
+                        </div>
 
-            <div class="span3">
+                        <div style="width: 100%;padding: 5px">
+                            <label style="color:rgb(51, 51, 51)">声音名称</label>
+                            <input type="text" id="name" name="name" placeholder="请输入这段声音的名称"
+                                   ng-model="defaultSound.name"
+                                   class="input-xlarge">
+                        </div>
+
+                        <div style="width: 100%;padding: 5px;padding-bottom: 15px" class="container">
+                            <label style="color:rgb(51, 51, 51)">声音标签</label>
+
+                            <div style="width: 120%" class="container">
+                                <div id="tags_div" ng-repeat="tag in defaultSound.tags" style="float: left">
+                                    <div class="btn-group green" style="padding: 5px;padding-right: 15px;"
+                                         id="tag_{{tag}">
+                                        <label><i class="icon-tag "> {{tag}}</i>  <i class="icon-remove"
+                                                                                          ng-click="removeTag(tag)"></i>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <input type="text" id="tags" name="tags" class="input-small" placeholder="请打一个标签">
+                        </div>
+
+                        <div style="width: 100%;padding: 5px">
+                            <label style="color:rgb(51, 51, 51)">声音描述</label>
+                            <textarea id="description" name="description" placeholder="请介绍这段声音"
+                                      ng-model="defaultSound.description" class="input-xlarge"></textarea>
+
+
+                            <div class="btn-group" data-toggle="buttons-radio">
+                                <button type="button" class="btn" ng-click="setPrivate()">私有</button>
+                                <button type="button" class="btn active" ng-click="setPublic()">公开</button>
+                            </div>
+
+                            <div  style="padding-top: 15px">
+                                <label style="color:rgb(51, 51, 51)">评论模式</label>
+                                <select ng-model="defaultSound.commentMode" ng-options="cm.name for cm in commentModes">
+                                </select>
+                             </div>
+                        </div>
+
+                        <div class="pull-right">
+                            <a id="save_button" href="#"
+                               class="button button-small button-rounded button-flat-action action-button disabled"
+                               onclick="return false;" ng-click="save()">保存声音信息</a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="span3">
+                </div>
             </div>
-        </div>
         </div>
 
     </div>
